test/passing-sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compliant-app
  labels:
    app.kubernetes.io/name: compliant-app
    app.kubernetes.io/instance: test
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sample-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "istio"
spec:
  ingressClassName: istio
  tls:
    - secretName: compliant-app-tls
      hosts:
        - compliant-app.bigbang.dev
  rules:
    - host: compliant-app.bigbang.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: compliant-app
                port:
                  number: 8080
