test/passing-sample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compliant-app
  labels:
    app.kubernetes.io/name: compliant-app
    app.kubernetes.io/instance: test
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sample-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http  # Named port required for Istio
  selector:
    app.kubernetes.io/name: compliant-app
    app.kubernetes.io/instance: test
